# gitlab-mcp-server

./: .gitignore  .pylintrc  CHANGELOG.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  dependency-security.yml  osv-scanner-pr.yml  publish-to-pypi.yml  pylint.yml  safety-scan.yml
src/gitlab_mcp_server/: __init__.py  errors.py  server.py
tests/: __init__.py  conftest.py  test_cicd_tools.py  test_config_and_client.py  test_error_handling.py  test_filtering_and_pagination.py  test_group_tools.py  test_issue_tools.py  test_label_milestone_tools.py  test_merge_request_tools.py  test_project_tools.py  test_repository_tools.py  test_server_initialization.py  test_user_tools.py  test_validation.py
